added new fields for users and changed the views based on type

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,6 +9,17 @@
     </div>
     <div class="spacer"></div>
     <div class="spacer1"></div>
-    <%= render 'form' %>
+    <% if params[:type] == "Student" %>
+     
+       <%= render 'student_form' %>
+    
+    <% elsif params[:type] == "Parent" %>
+    
+       <%= render 'parent_form' %>
+    
+    <% end %>
+    
+    <%#= render 'form' %>
+    
 </div>
 
