updated views and user controller

--- a/app/views/users/_parent_form.html.erb
+++ b/app/views/users/_parent_form.html.erb
@@ -23,7 +23,7 @@
                         <td width="65%"><%= text_field :user, :email, :style => 'width:234px; height:30px; border:#999999 1px solid;' %></td>
                     </tr>
                    
-                    <%= hidden_field :user, :type, :value => (params[:type] || "Parent") %>
+                    <%= hidden_field :user, :type, :value => "Parent" %>
                    
                     <tr>
                         <td width="2%">&nbsp;</td>
