--- a/app/views/users/_student_form.html.erb
+++ b/app/views/users/_student_form.html.erb
@@ -23,7 +23,7 @@
                         <td width="65%"><%= text_field :user, :email, :style => 'width:234px; height:30px; border:#999999 1px solid;' %></td>
                     </tr>
                     
-                    <%= hidden_field :user, :type, :value => (params[:type] || "Student") %>
+                    <%= hidden_field :user, :type, :value => "Student" %>
                     
                     <tr>
                         <td width="2%">&nbsp;</td>
