--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><%= @title %></title>
   <link href="/css/style.css" rel="stylesheet" type="text/css" />
+   <%= stylesheet_link_tag :all, 'jquery.ui.autocomplete' %>
+  <%= javascript_include_tag :defaults, 'jquery.ui.core', 'jquery.ui.widget', 'jquery.ui.position', 'jquery.ui.autocomplete', 'jquery.ui.datepicker' %>
+
+  
 </head>
 <body>
   <div class="container">
