--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,34 @@
-<% title "Update Profile" %>
+<div class="mid">
+	<div class="login_head_box">
+		<div style="width:300px; float:left; margin:15px 0 0 15px; font-family:'Segoe UI'; font-size:15px; font-weight:bold; color:#000000;">
+			<img src="/img/person.png" width="16" height="14" />&nbsp;&nbsp;Admin - Edit User</div>
+		<div style="width:300px; float:right; text-align:right; margin:15px 0 0 15px; font-family:'Segoe UI'; font-size:15px; font-weight:bold; color:#0036ff;"> <%= link_to "Logout", logout_path %> &nbsp;&nbsp;&nbsp;&nbsp;</div>
+	</div>
+	<div class="spacer"></div>
+	<div class="spacer1"></div>
 
-<%= render 'form' %>
+	<div id="signup_form">
 
-<p><%= link_to 'Dashboard', dashboard_path  %></p>
+	   <div class="login_box_two">
 
+			  <%= form_for @user, :url => user_path(@user), :method => :put do |f| %>
+			  
+					<%= render "shared/error_messages", :target => @user %>
+
+					<% if params[:type] == "Student" || @user_type == "Student" %>
+
+						 <%= render 'student_form', :f => f %>
+
+					<% elsif params[:type] == "Parent" || @user_type == "Parent" %>
+
+						 <%= render 'parent_form', :f => f %>
+
+					<% end %>   
+
+			  <% end %>
+
+		</div>
+
+	</div> 
+
+</div>
